# atramhasis-docker

./: Dockerfile  README.md  config.ini  data.csv  development.ini  docker-compose.yml  load.sh
.openshift/: Jenkinsfile  meemoo-atramhasis-multibranch-pipeline.xml  meemoo-atramhasis-template.yml
meemoo_atramhasis/: Dockerfile  README.rst  __init__.py  data.csv  development.ini  pyproject.toml
meemoo_atramhasis/static/: _my_thesaurus-settings.scss
meemoo_atramhasis/static/fonts/: 3AFA78_0_0.eot  3AFA78_1_0.eot  3AFA78_2_0.eot  3AFA78_3_0.eot
meemoo_atramhasis/static/scss/: _atramhasis-article.scss  _atramhasis-custom.scss  _atramhasis-home.scss  _meemoo_atramhasis-settings.scss  app.scss  scaf_app.scss  settings.scss
meemoo_atramhasis/templates/: conceptscheme.jinja2  conceptschemes_overview.jinja2  welcome.jinja2
