[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meemoo_atramhasis"
description = "My atramhasis setup"
version = "0.0.1"

dependencies = [
    "atramhasis",
    "pyramid",
]

[project.optional-dependencies]
dev = [
    "waitress",
    "pyramid_debugtoolbar",
]

[project.entry-points."paste.app_factory"]
main = "meemoo_atramhasis:main"
